<resources>
    <string name="app_name">Geographical Assistant</string>
    <string name="Africa">Africa</string>
    <string name="antarctica">Antarctica</string>
    <string name="europe">Europe</string>
    <string name="asia">Asia</string>
    <string name="north_america">North America</string>
    <string name="oceania">Oceania</string>
    <string name="south_america">South America</string>
    <string name="languages">Languages:</string>
    <string name="currency">Currency: </string>
    <string name="natives">Native:</string>
    <string name="phone">Phone:</string>
    <string name="help">Choose one of the country from list for showing of information</string>
</resources>