<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MainActivity"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="50dp"
        android:background="@color/background_sea_blue"
        android:paddingBottom="50dp">

        <TextView
            android:id="@+id/africa"
            android:elevation="@dimen/elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="20dp"
            android:textColor="@color/dark_blue"
            android:text="@string/Africa"
            android:onClick="startCountryActivity"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/antarctica"
            android:elevation="@dimen/elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="20dp"
            android:textColor="@color/dark_blue"
            android:text="@string/antarctica"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="startCountryActivity"

            app:layout_constraintEnd_toStartOf="@+id/asia"
            app:layout_constraintStart_toEndOf="@id/africa"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/asia"
            android:elevation="@dimen/elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:padding="20dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/asia"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="startCountryActivity"

            app:layout_constraintStart_toEndOf="@id/helpBorder"
            app:layout_constraintEnd_toStartOf="@+id/europe"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/helpBorder"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/antarctica"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/europe"
            android:elevation="@dimen/elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/europe"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="startCountryActivity"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  New Line  -->

        <TextView
            android:id="@+id/north_america"
            android:elevation="@dimen/elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/north_america"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="startCountryActivity"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/oceania"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:clickable="true"
            android:elevation="@dimen/elevation"
            android:textColor="@color/dark_blue"
            android:focusable="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/oceania"
            android:textSize="30sp"
            android:onClick="startCountryActivity"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/south_america"
            app:layout_constraintStart_toEndOf="@id/north_america" />

        <TextView
            android:id="@+id/south_america"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:clickable="true"
            android:elevation="@dimen/elevation"
            android:focusable="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/south_america"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            android:onClick="startCountryActivity"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>